ignacio.luz99@gmail.com
Aun faltan detalles

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -961,6 +961,69 @@
                             </div>
                         </div>
                     </div>
+                    <div class="tarjeta-wrap" >
+                        <div class="tarjeta" >
+                            <div class="adelante"
+                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
+                            <div class="atras">
+                                <ul style="padding: 10px;">
+                                    {{producto.nombre_prod}}
+                                    <br>
+                                        {{producto.precio_prod}}
+                                        {{producto.desc_prod}}
+                                        {{i}}
+                                    <br>
+                                    <br>
+                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
+                                        <button type="submit" class="btn btn-primary btn-xs"><i
+                                                class="fas fa-credit-card"></i> Añadir</button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-wrap" >
+                        <div class="tarjeta" >
+                            <div class="adelante"
+                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
+                            <div class="atras">
+                                <ul style="padding: 10px;">
+                                    {{producto.nombre_prod}}
+                                    <br>
+                                        {{producto.precio_prod}}
+                                        {{producto.desc_prod}}
+                                        {{i}}
+                                    <br>
+                                    <br>
+                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
+                                        <button type="submit" class="btn btn-primary btn-xs"><i
+                                                class="fas fa-credit-card"></i> Añadir</button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-wrap" >
+                        <div class="tarjeta" >
+                            <div class="adelante"
+                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
+                            <div class="atras">
+                                <ul style="padding: 10px;">
+                                    {{producto.nombre_prod}}
+                                    <br>
+                                        {{producto.precio_prod}}
+                                        {{producto.desc_prod}}
+                                        {{i}}
+                                    <br>
+                                    <br>
+                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
+                                        <button type="submit" class="btn btn-primary btn-xs"><i
+                                                class="fas fa-credit-card"></i> Añadir</button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </div>
         <!-- Lo mas vendido-->
