--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" routerLink="/inicio">INICIO</a>
+            <a class="nav-link" routerLink="/inicio" [routerLinkActive]="['activado']">INICIO</a>
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
@@ -42,8 +42,8 @@
         <li class="nav-item">
             <a class="nav-link" href="Ecoweb.html">CONTACTOS</a>
         </li>
-        <li class="nav-item" *ngIf="level=='A'"><a class="nav-link text-danger" routerLink="/usuarios">USUARIOS</a></li>
-        <li class="nav-item" *ngIf="level=='A'"><a class="nav-link text-danger" routerLink="/productos">PRODUCTOS</a></li>
+        <li class="nav-item" *ngIf="level=='A'" ><a class="nav-link text-light"  [routerLinkActive]="['activado']" routerLink="/usuarios"><b>USUARIOS</b></a></li>
+        <li class="nav-item" *ngIf="level=='A'" ><a class="nav-link text-light"  [routerLinkActive]="['activado']" routerLink="/productos"><b>PRODUCTOS</b></a></li>
     </ul>
 
 </nav>
