--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,6 +1,18 @@
 <app-menu></app-menu>
 <div class="container mt-3" >
     <div class="row">
+        <div class="col-sm-8" ></div>
+        <div class="col-sm-4">
+            <form class="form-inline mt-3">
+                <input class="form-control" ng-disabled = "level == 'A'" type="text" name="buscar" placeholder="Buscar" (keyup)="buscarProductos()" [(ngModel)]="buscar">
+                
+                <button class="btn btn-info ml-1" ng-disabled = "level == 'A'" (click)="buscarProductos()"><i class="fa fa-search mr-1"></i>Buscar</button>
+            </form>
+        </div>
+    </div>
+    
+
+    <div class="row">
         <div class="col">
             <div class="text-center mb-3">
                 <button type="button" class="btn btn-primary" id="entrar" data-toggle='modal' data-target='#nuevoProducto'>Nuevo producto</button>
@@ -20,7 +32,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let producto of productos">
+                    <tr  *ngFor="let producto of productos">
                         <td>{{producto.id_prod}}</td>
                         <td>{{producto.nombre_prod}}</td>
                         <td>{{producto.precio_prod}}</td>
@@ -104,13 +116,13 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header text-center">
                 <h5 class="modal-title text-center" id="exampleModalLongTitle">Editar Producto</h5>
-                <div class="input-group mb-3 row">
-                    <div class="input-group-prepend">
+                <div class="input-group mb-3 col-sm-6 text-center">
+                    <div class="input-group-prepend" >
                         <div class="input-group-text">Id:</div>
                     </div>
-                    <input type="text" class="form-control col-xs-2" size="5" id="nombreeditarProd"
+                    <input type="text" class="form-control col-sm-2" size="5" id="nombreeditarProd"
                         [(ngModel)]="tmpProducto.id_prod" disabled>
                 </div>
 
