ignacioluz58@gmail.com
Funciona registro y logueo

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
     <!--Codigo posicion imagen-->
     <div class="col-sm-4 text-center mt-2">
         <div id="_desktop_logo">
-            <a href="#">
+            <a routerLink= "/inicio">
                 <img class="logo img-fluid" src="../../assets/img/titulo.png" alt="tecnojaguars-pc">
             </a>
         </div>
