--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -923,7 +923,7 @@
                                     <br>
                                     <div class="form-group" style="margin-top: 50px;">
                                         <button type="submit" class="btn btn-primary btn-xs"><i
-                                                class="fas fa-credit-card"></i> Añadir</button>
+                                                class="fas fa-credit-card" ></i> Añadir</button>
                                     </div>
                                 </ul>
                             </div>
@@ -954,71 +954,9 @@
                                     <br>
                                     <br>
                                     <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
-                                        <button type="submit" class="btn btn-primary btn-xs"><i
-                                                class="fas fa-credit-card"></i> Añadir</button>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tarjeta-wrap" >
-                        <div class="tarjeta" >
-                            <div class="adelante"
-                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
-                            <div class="atras">
-                                <ul style="padding: 10px;">
-                                    {{producto.nombre_prod}}
-                                    <br>
-                                        {{producto.precio_prod}}
-                                        {{producto.desc_prod}}
-                                        {{i}}
-                                    <br>
-                                    <br>
-                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
-                                        <button type="submit" class="btn btn-primary btn-xs"><i
-                                                class="fas fa-credit-card"></i> Añadir</button>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tarjeta-wrap" >
-                        <div class="tarjeta" >
-                            <div class="adelante"
-                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
-                            <div class="atras">
-                                <ul style="padding: 10px;">
-                                    {{producto.nombre_prod}}
-                                    <br>
-                                        {{producto.precio_prod}}
-                                        {{producto.desc_prod}}
-                                        {{i}}
-                                    <br>
-                                    <br>
-                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
-                                        <button type="submit" class="btn btn-primary btn-xs"><i
-                                                class="fas fa-credit-card"></i> Añadir</button>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tarjeta-wrap" >
-                        <div class="tarjeta" >
-                            <div class="adelante"
-                                style="background-size: cover; background-image: url({{producto.url_prod}});"></div>
-                            <div class="atras">
-                                <ul style="padding: 10px;">
-                                    {{producto.nombre_prod}}
-                                    <br>
-                                        {{producto.precio_prod}}
-                                        {{producto.desc_prod}}
-                                        {{i}}
-                                    <br>
-                                    <br>
-                                    <div class="form-group" style="margin-top: 50px;" *ngIf="level=='U'">
-                                        <button type="submit" class="btn btn-primary btn-xs"><i
-                                                class="fas fa-credit-card"></i> Añadir</button>
+                                        <div *ngIf="existe(producto)" class="text-success text-center"> <h4>!!Ya en tu carrito!!</h4></div>
+                                        <div *ngIf="!existe(producto)"><button type="submit" class="btn btn-primary btn-xs" (click)="agregarCarrito(producto)"><i
+                                                class="fas fa-credit-card" ></i> Añadir</button></div>
                                     </div>
                                 </ul>
                             </div>
