--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     <input type="submit" name="" value="Entrar" (click)="entrar()">
     <a href="recuperar.html" id="cuatro">¿Ha olvidado su contraseña?</a>
     <br>
-    <a href="Registro.html" id="c1">¿No tiene una cuenta? ¡Da clic aqui!</a>
+    <a routerLink = "/registro" id="c1">¿No tiene una cuenta? ¡Da clic aqui!</a>
 </form><br><br>
 
 
