--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,6 +1,17 @@
 <app-menu></app-menu>
 <div class="container mt-3" >
     <div class="row">
+        <div class="col-sm-8" ></div>
+        <div class="col-sm-4">
+            <form class="form-inline mt-3">
+                <input class="form-control" type="text" name="buscar" placeholder="Buscar Usuario" (keyup)="buscarUsuarios()" [(ngModel)]="buscar">
+                
+                <button class="btn btn-info ml-1" (click)="buscarUsuarios()"><i class="fa fa-search mr-1"></i>Buscar</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col">
             <div class="text-center mb-3">
                 <button type="button" class="btn btn-primary" id="entrar" data-toggle='modal' data-target='#nuevoUsuario'>Nuevo usuario</button>
@@ -94,17 +105,17 @@
             <div class="modal-body">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
+                        <div class="input-group-text">Usuario:</div>
+                    </div>
+                    <input type="text" class="form-control" id="usereditarUser" placeholder="Usuario"
+                        [(ngModel)]="tmpUser.user" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
                         <div class="input-group-text">Nombre:</div>
                     </div>
                     <input type="text" class="form-control" id="nombreeditarUser" placeholder="Nombre"
                         [(ngModel)]="tmpUser.nombre">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Usuario:</div>
-                    </div>
-                    <input type="text" class="form-control" id="usereditarUser" placeholder="Usuario"
-                        [(ngModel)]="tmpUser.user">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
